Chore: update .gitignor

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 ## ─────────────────────────────
 ## Temp Data
 ## ─────────────────────────────
-temp/
+_temp/
+logs/
 
 ## ─────────────────────────────
 ## Visual Studio / Build
